--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'Jesus Christ -- Trial'
 - !lcc 'BT'
 - !lcsh 'Trials (Blasphemy) -- Jerusalem'
+- GITenberg
 title: "The Trial of Jesus from a Lawyer's Standpoint, Vol. 2 (of 2)\r\nThe Roman\
   \ Trial"
 url: http://www.gutenberg.org/ebooks/40967
